--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -100,7 +100,7 @@ jobs:
       - name: get changed files
         id: getfile
         run: |
-          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | xargs)"
+          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only --diff-filter=A -r ${{ github.sha }} | xargs)"
       - name: echo output
         run: |
           echo ${{ steps.getfile.outputs.files }}
