--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -54,7 +54,7 @@ jobs:
           for file in ${{ steps.getfile.outputs.files }}; do
             if [[ $file == mobile* ]]; then
               FILE_NAME=$(basename "$file")
-              MESSAGE="\nMobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
+              MESSAGE="Mobile Application Report Link: https://hasankfz.github.io/mobile-app-reports.github.io/$file"
               echo "Sending message: $MESSAGE"
               MESSAGES+=("$MESSAGE")
             fi
